--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@
     height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 70% 30%;
+    grid-template-rows: 50% 50%;
     grid-template-areas: 
-    "a a"
-    "b c "
+    "a b"
+    "c d "
 }
 
 .a{
@@ -31,6 +31,15 @@
 }
 
 .c{
+    grid-area: c;
+    background: rgb(83, 82, 82);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
+}
+
+.grid{
     grid-area: c;
     background: rgb(83, 82, 82);
     display: flex;
