--- a/style.css
+++ b/style.css
@@ -47,3 +47,15 @@
     align-items: center;
     flex-direction: column; 
 }
+
+.menu{
+    width: 50px;
+    height: 25px;
+    background-color: salmon;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+}
