--- a/style.css
+++ b/style.css
@@ -59,3 +59,14 @@
     text-decoration: none;
     color: white;
 }
+
+.table{
+    
+    background-color: white;
+    border: 1px solid black;
+    text-align: center;
+    text-justify: center;
+    border-collapse: collapse;
+    
+    
+}
