--- a/style.css
+++ b/style.css
@@ -64,9 +64,12 @@
     
     background-color: white;
     border: 1px solid black;
-    text-align: center;
-    text-justify: center;
-    border-collapse: collapse;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+
     
     
 }
