--- a/style.css
+++ b/style.css
@@ -82,3 +82,41 @@
 .tytul{
     font-size: 50px;
 }
+
+.c2{
+    grid-area: b;
+    background: blue;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.c3{
+    grid-area: b;
+    background: red;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.c4{
+    grid-area: b;
+    background:green;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btnZmiana, .btnZmiana1, .btnZmiana2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 50px;
+    background: salmon;
+    color: white;
+    margin: 20px;
+}
