--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@
 }
 
 .c2{
-    grid-area: b;
+    grid-area: c;
     background: blue;
     color: white;
     display: flex;
@@ -96,7 +96,7 @@
 }
 
 .c3{
-    grid-area: b;
+    grid-area: c;
     background: red;
     color: white;
     display: flex;
@@ -105,7 +105,7 @@
 }
 
 .c4{
-    grid-area: b;
+    grid-area: c;
     background:green;
     color: white;
     display: flex;
